# icpc-tests-editor

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: CMakeLists.txt
src/desktop-app/: CMakeLists.txt
src/desktop-app/impl/: App.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  TestContentManager.cpp  TestContentManager.h  TestContentManager.hpp
src/task-processor/: CMakeLists.txt
src/task-processor/impl/EntireFile/: EntireFileContentEditor.cpp  EntireFileContentEditor.hpp  EntireFileTask.cpp  EntireFileTask.hpp  EntireFileTestSelector.cpp  EntireFileTestSelector.hpp
src/task-processor/impl/Visualizer/: StatVisualizer.cpp  StatVisualizer.h
src/task-processor/public/TaskProcessor/: ITask.hpp  ITestContentEditor.hpp  ITestSelector.hpp  ITestVisualizer.hpp  TaskLoader.cpp  TaskLoader.hpp  TestVisualizerBase.cpp  TestVisualizerBase.hpp
